--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Zunnan Xu
 position: M.Eng Student
 affiliation: |
   Tsinghua University
-email: xuzn3@qq.com 
+email: xuzn3 At qq.com 
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
